Fix horizontal scroll on print

--- a/assets/_sass/components/_layout.scss
+++ b/assets/_sass/components/_layout.scss
@@ -9,6 +9,12 @@ body{
 	background-attachment: fixed;
 	background-position: center center;
 }
+.overflow-x{
+	overflow-x:auto;
+	@include print{
+		overflow-x: initial;
+	}
+}
 .wrapper{
 	width: $width;
 	max-width: $max-width;
